--- a/projects/porject_03.ipynb
+++ b/projects/porject_03.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -28,47 +14,52 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 130,
+      "metadata": {
+        "id": "1MYXuRP76VLV"
+      },
+      "outputs": [],
       "source": [
         "from google.colab import userdata\n",
         "# GEMINI API KEY\n",
         "GOOGLE_API_KEY= userdata.get(\"GOOGLE_API_KEY\")\n",
         "# WETAHTER API KEY\n",
         "WEATHER_API_KEY= userdata.get(\"WEATHER_API_KEY\")"
-      ],
-      "metadata": {
-        "id": "1MYXuRP76VLV"
-      },
-      "execution_count": 130,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from langchain_google_genai import ChatGoogleGenerativeAI"
-      ],
+      "execution_count": 131,
       "metadata": {
         "id": "huVaxtno6pJ-"
       },
-      "execution_count": 131,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from langchain_google_genai import ChatGoogleGenerativeAI"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 132,
+      "metadata": {
+        "id": "W-gW2xeM680L"
+      },
+      "outputs": [],
       "source": [
         "# configure model and\n",
         "llm = ChatGoogleGenerativeAI(\n",
         "    model=\"gemini-2.0-flash-exp\",\n",
         "    api_key=GOOGLE_API_KEY # GEMINI API KEY\n",
         ")"
-      ],
-      "metadata": {
-        "id": "W-gW2xeM680L"
-      },
-      "execution_count": 132,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 133,
+      "metadata": {
+        "id": "wAoh5g1w-ybq"
+      },
+      "outputs": [],
       "source": [
         "from langchain_core.tools import tool\n",
         "import requests\n",
@@ -124,45 +115,33 @@
         "    except requests.exceptions.RequestException as e:\n",
         "        return {\"error\": str(e)}\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "wAoh5g1w-ybq"
-      },
-      "execution_count": 133,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "tools = [ annual_return, multi , add_two_numbers,get_weather_data]"
-      ],
+      "execution_count": 134,
       "metadata": {
         "id": "7LykAiZkANah"
       },
-      "execution_count": 134,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "tools = [ annual_return, multi , add_two_numbers,get_weather_data]"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "llm_with_tools = llm.bind_tools(tools)"
-      ],
+      "execution_count": 101,
       "metadata": {
         "id": "P7ZB82SP-JRb"
       },
-      "execution_count": 101,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "llm_with_tools = llm.bind_tools(tools)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from langchain_core.messages import HumanMessage, AIMessage,ToolMessage\n",
-        "query = \"Q1 What is the weather of lahore ?\"\n",
-        "\n",
-        "message = [HumanMessage(query)]\n",
-        "\n",
-        "display(message)"
-      ],
+      "execution_count": 153,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -171,26 +150,29 @@
         "id": "y9zfI2F_-n3b",
         "outputId": "c4143871-7a23-439a-95e4-ab2211a29b87"
       },
-      "execution_count": 153,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
             "text/plain": [
               "[HumanMessage(content='Q1 What is the weather of lahore ?', additional_kwargs={}, response_metadata={})]"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "from langchain_core.messages import HumanMessage, AIMessage,ToolMessage\n",
+        "query = \"Q1 What is the weather of lahore ?\"\n",
+        "\n",
+        "message = [HumanMessage(query)]\n",
+        "\n",
+        "display(message)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "ai_msg = llm_with_tools.invoke(message)\n",
-        "message.append(tools)\n",
-        "message"
-      ],
+      "execution_count": 154,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -198,10 +180,8 @@
         "id": "zJEQvMTHCA6X",
         "outputId": "b9465a2e-6ef7-46f8-f0af-1eb322664074"
       },
-      "execution_count": 154,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[HumanMessage(content='Q1 What is the weather of lahore ?', additional_kwargs={}, response_metadata={}),\n",
@@ -211,16 +191,20 @@
               "  StructuredTool(name='get_weather_data', description='Fetches weather data for the given city using OpenWeatherMap API.\\n\\nArgs:\\n    city (str): The name of the city to get the weather for.\\n    api_key (str): Your OpenWeatherMap API key.\\n\\nReturns:\\n    dict: A dictionary containing weather data for the city.', args_schema=<class 'langchain_core.utils.pydantic.get_weather_data'>, func=<function get_weather_data at 0x7f10631103a0>)]]"
             ]
           },
+          "execution_count": 154,
           "metadata": {},
-          "execution_count": 154
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "ai_msg = llm_with_tools.invoke(message)\n",
+        "message.append(tools)\n",
+        "message"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(ai_msg.tool_calls)"
-      ],
+      "execution_count": 156,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -228,22 +212,22 @@
         "id": "7yaC8J6X9u6B",
         "outputId": "d56e80c5-04eb-43b8-dc15-83328af0b867"
       },
-      "execution_count": 156,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[{'name': 'get_weather_data', 'args': {'city': 'lahore'}, 'id': '4df81f77-ad40-4642-ab5f-63d47552498f', 'type': 'tool_call'}]\n"
           ]
         }
+      ],
+      "source": [
+        "print(ai_msg.tool_calls)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "ai_msg.tool_calls"
-      ],
+      "execution_count": 157,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -251,10 +235,8 @@
         "id": "2JqGJDNNCkk6",
         "outputId": "09fd5bb2-6027-424c-a4a6-f51bec87bf5f"
       },
-      "execution_count": 157,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[{'name': 'get_weather_data',\n",
@@ -263,38 +245,38 @@
               "  'type': 'tool_call'}]"
             ]
           },
+          "execution_count": 157,
           "metadata": {},
-          "execution_count": 157
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "ai_msg.tool_calls"
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "whar is the drawbaks of ai tool calling"
-      ],
-      "metadata": {
-        "id": "lb3LRFJQHRg7"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "cRQ1Z_2wJseB"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "AST_summery means  (abstract syntex tree)"
-      ],
-      "metadata": {
-        "id": "03weYa2kJepH"
-      }
-    },
-    {
       "cell_type": "code",
+      "execution_count": 158,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        },
+        "collapsed": true,
+        "id": "mAPLm6c-DZGb",
+        "outputId": "54561219-8c48-4ee9-8ab7-8a4482d0bf9c"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "ToolMessage(content='{\"coord\": {\"lon\": 74.3436, \"lat\": 31.5497}, \"weather\": [{\"id\": 711, \"main\": \"Smoke\", \"description\": \"smoke\", \"icon\": \"50n\"}], \"base\": \"stations\", \"main\": {\"temp\": 11.99, \"feels_like\": 11.23, \"temp_min\": 11.99, \"temp_max\": 11.99, \"pressure\": 1019, \"humidity\": 76, \"sea_level\": 1019, \"grnd_level\": 993}, \"visibility\": 4000, \"wind\": {\"speed\": 0, \"deg\": 0}, \"clouds\": {\"all\": 0}, \"dt\": 1736793623, \"sys\": {\"type\": 1, \"id\": 7585, \"country\": \"PK\", \"sunrise\": 1736733760, \"sunset\": 1736770765}, \"timezone\": 18000, \"id\": 1172451, \"name\": \"Lahore\", \"cod\": 200}', name='get_weather_data', tool_call_id='4df81f77-ad40-4642-ab5f-63d47552498f')"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "# Invoke the function / tool\n",
         "for tool_call in ai_msg.tool_calls:\n",
@@ -307,103 +289,41 @@
         "    tool_msg = selected_tool.invoke(tool_call)\n",
         "    display(tool_msg)\n",
         "    message.append(tool_msg)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 86
-        },
-        "id": "mAPLm6c-DZGb",
-        "outputId": "54561219-8c48-4ee9-8ab7-8a4482d0bf9c",
-        "collapsed": true
-      },
-      "execution_count": 158,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "ToolMessage(content='{\"coord\": {\"lon\": 74.3436, \"lat\": 31.5497}, \"weather\": [{\"id\": 711, \"main\": \"Smoke\", \"description\": \"smoke\", \"icon\": \"50n\"}], \"base\": \"stations\", \"main\": {\"temp\": 11.99, \"feels_like\": 11.23, \"temp_min\": 11.99, \"temp_max\": 11.99, \"pressure\": 1019, \"humidity\": 76, \"sea_level\": 1019, \"grnd_level\": 993}, \"visibility\": 4000, \"wind\": {\"speed\": 0, \"deg\": 0}, \"clouds\": {\"all\": 0}, \"dt\": 1736793623, \"sys\": {\"type\": 1, \"id\": 7585, \"country\": \"PK\", \"sunrise\": 1736733760, \"sunset\": 1736770765}, \"timezone\": 18000, \"id\": 1172451, \"name\": \"Lahore\", \"cod\": 200}', name='get_weather_data', tool_call_id='4df81f77-ad40-4642-ab5f-63d47552498f')"
-            ]
-          },
-          "metadata": {}
-        }
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "what is fine tuning\n",
-        "crafting means from scratch\n",
-        "refining means bar bar wahi process\n",
-        "\n",
-        "explecit or implecit\n",
-        "\n",
-        "question or instruction this is zero short\n",
-        "\n",
-        "1 example 1 short\n",
-        "\n",
-        "examples then few short\n",
-        "\n",
-        "\n",
-        "chain of thouths\n",
-        "Zero-Shot Chain-of-Thought\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "qiU7HoLEMVvC"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "Df1ZNGefV-ct"
-      }
-    },
-    {
       "cell_type": "code",
-      "source": [
-        "\n",
-        "display(tool_msg.content)"
-      ],
+      "execution_count": 166,
       "metadata": {
-        "id": "FIN_ZVOrVwzl",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
         },
+        "id": "FIN_ZVOrVwzl",
         "outputId": "91b7256f-aa80-4037-acc9-fa4392c1521e"
       },
-      "execution_count": 166,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "'{\"coord\": {\"lon\": 74.3436, \"lat\": 31.5497}, \"weather\": [{\"id\": 711, \"main\": \"Smoke\", \"description\": \"smoke\", \"icon\": \"50n\"}], \"base\": \"stations\", \"main\": {\"temp\": 11.99, \"feels_like\": 11.23, \"temp_min\": 11.99, \"temp_max\": 11.99, \"pressure\": 1019, \"humidity\": 76, \"sea_level\": 1019, \"grnd_level\": 993}, \"visibility\": 4000, \"wind\": {\"speed\": 0, \"deg\": 0}, \"clouds\": {\"all\": 0}, \"dt\": 1736793623, \"sys\": {\"type\": 1, \"id\": 7585, \"country\": \"PK\", \"sunrise\": 1736733760, \"sunset\": 1736770765}, \"timezone\": 18000, \"id\": 1172451, \"name\": \"Lahore\", \"cod\": 200}'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'{\"coord\": {\"lon\": 74.3436, \"lat\": 31.5497}, \"weather\": [{\"id\": 711, \"main\": \"Smoke\", \"description\": \"smoke\", \"icon\": \"50n\"}], \"base\": \"stations\", \"main\": {\"temp\": 11.99, \"feels_like\": 11.23, \"temp_min\": 11.99, \"temp_max\": 11.99, \"pressure\": 1019, \"humidity\": 76, \"sea_level\": 1019, \"grnd_level\": 993}, \"visibility\": 4000, \"wind\": {\"speed\": 0, \"deg\": 0}, \"clouds\": {\"all\": 0}, \"dt\": 1736793623, \"sys\": {\"type\": 1, \"id\": 7585, \"country\": \"PK\", \"sunrise\": 1736733760, \"sunset\": 1736770765}, \"timezone\": 18000, \"id\": 1172451, \"name\": \"Lahore\", \"cod\": 200}'"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "\n",
+        "display(tool_msg.content)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n",
-        "# Invoke the llm\n",
-        "response = llm_with_tools.invoke(tool_msg.content)\n",
-        "\n"
-      ],
+      "execution_count": 168,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -411,27 +331,28 @@
         "id": "_hNVeNZu7Ius",
         "outputId": "1b2b3bf9-6d01-4775-ecea-c2d98e2346f2"
       },
-      "execution_count": 168,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "AIMessage(content='The weather in Lahore is smoke with a temperature of 11.99 degrees Celsius. The wind speed is 0 and the humidity is 76%.', additional_kwargs={}, response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': [{'category': 'HARM_CATEGORY_HATE_SPEECH', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_DANGEROUS_CONTENT', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_HARASSMENT', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_SEXUALLY_EXPLICIT', 'probability': 'NEGLIGIBLE', 'blocked': False}]}, id='run-4f66fa1e-7f96-4d65-b75d-fc219e3437c3-0', usage_metadata={'input_tokens': 528, 'output_tokens': 34, 'total_tokens': 562, 'input_token_details': {'cache_read': 0}})"
             ]
           },
+          "execution_count": 168,
           "metadata": {},
-          "execution_count": 168
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "\n",
+        "# Invoke the llm\n",
+        "response = llm_with_tools.invoke(tool_msg.content)\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from IPython.display import Markdown\n",
-        "\n",
-        "Markdown(response.content)"
-      ],
+      "execution_count": 169,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -440,20 +361,40 @@
         "id": "j0wY2w6--7ga",
         "outputId": "22f83058-8934-4f3c-c47f-f6fe92ebdb74"
       },
-      "execution_count": 169,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
+            "text/markdown": [
+              "The weather in Lahore is smoke with a temperature of 11.99 degrees Celsius. The wind speed is 0 and the humidity is 76%."
+            ],
             "text/plain": [
               "<IPython.core.display.Markdown object>"
-            ],
-            "text/markdown": "The weather in Lahore is smoke with a temperature of 11.99 degrees Celsius. The wind speed is 0 and the humidity is 76%."
+            ]
           },
+          "execution_count": 169,
           "metadata": {},
-          "execution_count": 169
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "from IPython.display import Markdown\n",
+        "\n",
+        "Markdown(response.content)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
